apps/stirling-pdf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pdf.pobournex`)
      kind: Rule
      services:
        - name: stirling-pdf-service
          port: 80
